--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/widget.css">
     <title>Chaordic OnSite</title>
-<body class="container">
-    <div id="reference" class="container__ref">
-        <h1>Você visitou:</h1>
-        <p>test</p>
-    </div>
-    <div id="recommendations" class="container__rec">
+<body class="container">    
+    <section id="reference" class="container__ref">        
+        <h1>Você visitou:</h1>        
+    </section>
+    <section id="recommendations" class="container__rec">
         <h1>e talvez se interesse por:</h1>        
-    </div>
+    </section>
     <script src="/js/widget.js"></script>
     <script src="http://roberval.chaordicsystems.com/challenge/challenge.json?callback=X"></script>
 </body>
