--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         </header>               
         <button id="btn-left" class="btn-left">⯇</button>
         <div id="recommendations"></div>
-        <button id="btn-right" class="btn-right" onclick="next();">⯈</button>
+        <button id="btn-right" class="btn-right">⯈</button>
     </section>
     <script src="/js/widget.js"></script>
     <script src="http://roberval.chaordicsystems.com/challenge/challenge.json?callback=X"></script>
